<resources>
    <string name="app_name">SoniControl firewall</string>
    <string name="spoofOnEachLoc">Block always</string>
    <string name="addressData">Not available</string>
    <string name="deleteJsonAlertTitle">Empty detection cache</string>
    <string name="deleteJsonAlertMessage">Are you sure you want to delete the JSON-file?</string>
    <string name="StatusNotificationSpoofingTitle">SoniControl</string>
    <string name="StatusNotificationSpoofingMesssage">Blocking ultrasonic communication...</string>
    <string name="StatusNotificationDetectionAlertTitle">SoniControl</string>
    <string name="StatusNotificationDetectionAlertMessage">Detected ultrasonic signal</string>
    <string name="StatusNotificationOnHoldTitle">SoniControl</string>
    <string name="StatusNotificationOnHoldMessage">Paused.</string>
    <string name="StatusNotificationScanningTitle">SoniControl</string>
    <string name="StatusNotificationScanningMessage">Scanning for ultrasonic sounds...</string>
    <string name="NotificationDetectionTitle">SoniControl</string>
    <string name="NotificationDetectionMessage">Detected ultrasonic signal</string>
    <string name="ButtonStopSignal">Pause</string>
    <string name="ButtonPlaySignal">Play</string>
    <string name="DeleteJsonAlertTitle">Delete location entry</string>
    <string name="DeleteJsonAlertMessage">Are you sure you want to delete the location entry?</string>
    <string name="noAddressForJsonFile">Not available</string>
    <string name="noSignalDiscoveredYet">You have not discovered any signals yet.</string>
    <string name="noFirewallRuleYet">You have not saved any rule yet.
        \n\nRules can be saved by selecting \"Always at this location\" when detecting a signal.</string>
    <string name="permissionRequestExplanation">The app requires at least the permission to access the microphone. Otherwise it cannot detect ultrasonic signals.</string>
    <string name="permissionMapRequestExplanation">Centering the map on your location requires "Location" permission. This permission is optional.</string>
    <string name="toastLocationAccessDenied">No permission to access location.</string>
    <string name="toastWritingAccessDenied">No permission to locally save map tiles.</string>
    <string name="aboutUsProject">Technologies like Google Nearby and Silverpush build upon ultrasonic sounds to exchange data (data over audio). More and more of our devices communicate via this inaudible communication channel. Every device with a microphone and a speaker is able to send and receive ultrasonic information. Users are usually not aware of this inaudible and hidden data transfer.
        \n\nSoniControl is a novel technology for the recognition and masking of acoustic ultrasound communication. SoniControl detects ultrasonic communication, notifies the user and blocks the information on demand. Thereby, SoniControl helps end-users to protect their privacy from potential audio tracking.
        \n\nThe project SoniControl has been financially supported by the funding program netidee (https://www.netidee.at) and has been developed in a research project at the Institute for Creative Media Technologies at the University of Applied Sciences Sankt Pölten (https://sonicontrol.fhstp.ac.at). The entire project is open source under GNU license.
        \n\nPrivacy statement: SoniControl does not send any data from the users to other places and works even completely offline. All program data are stored locally on the phone. SoniControl requires microphone access to listen to the ultrasonic channel (all hearable information is filtered out). It further requires location information if the user wants the app to block ultrasonic communication permanently at a certain location (e.g. near to an audio beacon mounted next to some building).
        \n\nIn case of questions, bugs, ideas, please contact us directly under https://sonicontrol.fhstp.ac.at/#contact or sonicontrol@fhstp.ac.at.</string>
    <string name="toastMessageNoGeocoderConnection">Not able to access location</string>
    <string name="alertDialog_option_jam_always_here">Block always here</string>
    <string name="alertDialog_option_dismiss_this_time">Allow</string>
    <string name="alertDialog_option_dismiss_always_here">Allow always here</string>
    <string name="alertDialog_option_jam_this_time">Block</string>
    <string name="alertDialog_text_ultrasonic_signal_detected">Ultrasonic signal detected</string>
    <string name="alertDialog_option_play">Make it audible!</string>
    <string name="storedLocationActivityTitle">Rules &amp; Detections</string>
    <string name="SettingsActivityTitle">Settings</string>
    <string name="AboutUsActivityTitle">About us</string>
    <string name="creditsText">Credits \n\n Audio by Superpowered (https://www.superpowered.com/)\n\nMaterial Icons used, which are under the license of Apache License Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0.txt )</string>
    <string name="privacy_policy_menuItem">Privacy policy</string>
    <string name="about_us_menuItem">About us</string>
    <string name="instructions_menuItem">Instructions</string>
    <string name="help_menuItem">Help</string>
    <string name="privacy_policy_text">Data collection and data processing:\n\n
- We use the microphone to capture sound, but process only the ultrasonic part, we remove everything under 17kHz.\n\n
- Sounds are analyzed in real time on the phone.\n\n
- Detections are stored locally in a JSON file, including the time, the type of technology detected by our algorithm, the decision, whether the sound source shall be blocked in future or not and the location of the detection (if location access is permitted by the user). The user can delete this file at any time via the "settings" menu.\n\n
- If allowed, we check the users\' location regularly in order to start blocking when they enter an area covered by a firewall rule (e.g. where they previously detected ultrasonic communications and decided to block it in future).\n\n
- The Internet permission is required to display the geographic map background and to share detections with the community. This permission is classified by Google/Android as uncritical (protection_normal). Therefore it is not shown in the permission overview of the app\'s detail information. No data is uploaded without the user opting in. Sharing is done on demand, when the user checks "Share detection", or automatically if an "always" firewall rule is met and the user opted in for sharing detections by default (from the "settings" menu). If the users share their detections, the time, technology detected, blocking decision, the location information (if allowed by the user) and a short audio sample of the detection (everything under 17kHz is removed), will be uploaded to the SoniControl server. No user ID is stored, and thus the data is anonymous. The uploaded audio samples are used to identify false detections of the firewall.\n\n
- If allowed, the geolocation is used to center the map on your position.
    </string>
    <string name="privacy_policy_label">Privacy policy</string>
    <string name="sonicontrolLink">https://sonicontrol.fhstp.ac.at</string>
    <string name="instructionsText">&lt;big>Welcome to the SoniControl firewall&lt;/big>
        \n\n&lt;p dir=\"rtl | ltr\">&lt;b>Quick start&lt;/b>&lt;br>
        Tap the Start Firewall button to start scanning for ultrasonic signals.&lt;/p>

        \n\n&lt;p dir=\"rtl | ltr\">&lt;b>Description&lt;/b>&lt;br>
        SoniControl scans for ultrasonic messages coming from other phones or audio beacons in your environment and notifies you about such detections. On a detection you can choose to block the messages (also future messages at the same location) or to let it pass.&lt;/p>

        \n\n&lt;p dir=\"rtl | ltr\">&lt;b>Permissions&lt;/b>&lt;br>
        SoniControl needs access to the microphone to work properly, and to your location (optional) to remember places where ultrasounds should be blocked. \n\nWe do not transmit any data from your phone and do not store privacy-sensitive data.&lt;/p>
    </string>
    <string name="instructionsTitle">Instructions</string>
    <string name="alert_no_json_file_message">To save/see locations where ultrasonic communications were detected, you need to check the \'Save data in JSON file\' setting</string>
    <string name="alert_no_json_file_title">No JSON file</string>
    <string name="alert_no_json_file_negative">Cancel</string>
    <string name="alert_no_json_file_positive">Save data in JSON file</string>
    <string name="alert_location_is_off_message">To save locations where ultrasonic communications were detected, you need to turn on location.
        \nYou can turn on Location in \'Phone Settings\'</string>
    <string name="alert_location_is_off_title">Location is off</string>
    <string name="alert_location_is_off_positive">Phone Settings</string>
    <string name="alert_location_is_off_negative">Not now</string>
    <string name="toast_location_is_on">Location is enabled</string>
    <string name="alert_location_is_off_checkbox_text">Don\'t ask again</string>
    <string name="settings_reset_settings">Reset all settings to default</string>
    <string name="alert_detection_date">Detected at:</string>
    <string name="toast_no_location_text">Location was not found and latest detection couldn\'t be saved</string>
    <string name="json_detections_unknown_address">Unknown address</string>
    <string name="alert_microphone_already_used_title">Microphone is already in use</string>
    <string name="alert_microphone_already_used_message">We could not start scanning, the microphone is already used by another app.</string>
    <string name="on_alert_no_location_message">Please activate location if you want to be able to save detections.</string>
    <string name="action_reset_settings_message">Do you want to reset all settings?</string>
    <string name="action_reset_settings_title">Reset settings</string>
    <string name="settings_location_radius_title">Location radius (%s metres)</string>
    <string name="settings_pulse_duration_title">Pulse duration (%s ms)</string>
    <string name="settings_pause_duration_title">Pause duration (%s ms)</string>
    <string name="settings_bandwidth_title">Bandwidth (%s Hz)</string>
    <string name="settings_blocking_duration_singular">Blocking duration (%s minute)</string>
    <string name="settings_blocking_duration_plural">Blocking duration (%s minutes)</string>
    <string name="stored_detections_will_be_blocked">will be blocked</string>
    <string name="stored_detections_will_be_allowed">will be allowed</string>
    <string name="settings_category_jammer">Advanced settings - Jammer (active blocking)</string>
    <string name="settings_category_blocking">Blocking</string>
    <string name="settings_category_expert">Advanced - RESET</string>
    <string name="settings_title_json_save">Save detections in JSON file</string>
    <string name="settings_title_clear_detections">Clear detections of JSON file</string>
    <string name="settings_summary_dont_ask">Don\'t ask for activating location</string>
    <string name="settings_title_microphone_for_blocking">Microphone for blocking</string>
    <string name="settings_title_preventive_blocking">Preventive blocking</string>
    <string name="gui_technology">Estimated type:</string>
    <string name="navigation_title_my_rules">My Rules</string>
    <string name="navigation_title_imported_rules">Imported Rules</string>
    <string name="navigation_title_detection_history">History</string>
    <string name="navigation_title_rules_on_map">Rules on Map</string>
    <string name="alert_share_your_detection">Make it available to the community</string>
    <string name="alert_spectrogram_title">Acoustic fingerprint of the signal</string>
    <string name="alert_save_as_firewall_rule">Save as firewall rule (remember)</string>
</resources>