<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ Copyright (c) 2018, 2019. Peter Kopciak, Kevin Pirner, Alexis Ringot, Florian Taurer, Matthias Zeppelzauer.
  ~
  ~ This file is part of SoniControl app.
  ~
  ~     SoniControl app is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     SoniControl app is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with SoniControl app.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_rules_info"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_info_outline_white_48dp"
        android:title="Rules Info"/>
    <item
        android:id="@+id/show_settings_info"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_info_outline_white_48dp"
        android:title="Rules Info"/>
    <item
        android:id="@+id/open_help"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_help_outline_white_48dp"
        android:title="@string/help_menuItem"/>
    <item
        android:id="@+id/open_about_us"
        android:title="@string/about_us_menuItem">
    </item>
    <item
        android:id="@+id/open_instructions"
        android:title="@string/instructions_menuItem">
    </item>
    <item
        android:id="@+id/open_privacy_policy"
        android:title="@string/privacy_policy_menuItem">
    </item>

</menu>

