<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, 2019. Peter Kopciak, Kevin Pirner, Alexis Ringot, Florian Taurer, Matthias Zeppelzauer.
  ~
  ~ This file is part of SoniControl app.
  ~
  ~     SoniControl app is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     SoniControl app is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with SoniControl app.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtAlertLocation"
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtAlertDate"
        tools:text="@string/gui_technology"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/txtAlertDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/txtAlertLocation"
        app:layout_constraintTop_toBottomOf="@id/txtAlertLocation"
        app:layout_constraintBottom_toTopOf="@id/txtSignalType"
        android:text="@string/gui_technology" />

    <TextView
        android:id="@+id/txtSignalType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/txtAlertDate"
        app:layout_constraintTop_toBottomOf="@id/txtAlertDate"
        app:layout_constraintBottom_toTopOf="@+id/txtSpectrogramTitle"
        android:text="@string/gui_technology" />

    <TextView
        android:id="@+id/txtSpectrogramTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/txtSignalType"
        app:layout_constraintTop_toBottomOf="@id/txtSignalType"
        android:text="@string/alert_spectrogram_title" />

    <ImageView
        android:id="@+id/placeholderSpectrogram"
        android:layout_width="wrap_content"
        android:layout_height="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpectrogramTitle"
        app:srcCompat="@drawable/spectrum_landscape"
        android:visibility="gone"/>

    <at.ac.fhstp.sonicontrol.ui.SpectrogramView
        android:id="@+id/spectrogram_view"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderSpectrogram"
        />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Small.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/spectrogram_view"
        app:layout_constraintEnd_toEndOf="@id/spectrogram_view"
        app:layout_constraintStart_toStartOf="@id/spectrogram_view"
        app:layout_constraintTop_toTopOf="@id/spectrogram_view"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnReplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:text="@string/alertDialog_option_play"
        android:textColor="@android:color/white"
        android:textAlignment="textStart"
        android:drawableLeft="@drawable/ic_play_arrow_white_48dp"
        app:layout_constraintTop_toBottomOf="@id/spectrogram_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="start" />

    <CheckBox
        android:id="@+id/cbSharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/alert_share_your_detection"
        app:layout_constraintStart_toStartOf="@id/btnDismissThisTime"
        app:layout_constraintTop_toBottomOf="@+id/btnReplay" />

    <TextView
        android:id="@+id/txtNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="@id/cbSharing"
        app:layout_constraintBottom_toTopOf="@id/cbSaveAsFirewallRule"
        app:layout_constraintTop_toBottomOf="@id/cbSharing"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/cbSaveAsFirewallRule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_save_as_firewall_rule"
        app:layout_constraintStart_toStartOf="@id/cbSharing"
        app:layout_constraintTop_toBottomOf="@+id/txtNoInternet" />

    <TextView
        android:id="@+id/txtNoLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="@id/cbSaveAsFirewallRule"
        app:layout_constraintTop_toBottomOf="@id/cbSaveAsFirewallRule"
        app:layout_constraintBottom_toTopOf="@id/btnDismissThisTime"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnDismissThisTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertDialog_option_dismiss_this_time"
        app:layout_constraintTop_toBottomOf="@id/txtNoLocation"
        app:layout_constraintEnd_toStartOf="@id/btnBlockThisTime"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnBlockThisTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertDialog_option_jam_this_time"
        app:layout_constraintTop_toTopOf="@id/btnDismissThisTime"
        app:layout_constraintStart_toEndOf="@id/btnDismissThisTime"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>